--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,18 @@ dotnet_diagnostic.CS8618.severity = none
 
 # CS8603: Existence possible d'un retour de référence null.
 dotnet_diagnostic.CS8603.severity = none
+
+# CS8625: Impossible de convertir un littéral ayant une valeur null en type référence non-nullable.
+dotnet_diagnostic.CS8625.severity = none
+
+# CS8600: Conversion de littéral ayant une valeur null ou d'une éventuelle valeur null en type non-nullable.
+dotnet_diagnostic.CS8600.severity = none
+
+# IDE0025: Utiliser un corps d'expression pour les propriétés
+dotnet_diagnostic.IDE0025.severity = none
+
+# CS8602: Déréférencement d'une éventuelle référence null.
+dotnet_diagnostic.CS8602.severity = none
+
+# CS8601: Existence possible d'une assignation de référence null.
+dotnet_diagnostic.CS8601.severity = none
