--- a/Sagonne.csproj
+++ b/Sagonne.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Bootstrap.Datepicker" Version="1.8.0.1" />
     <PackageReference Include="jQuery" Version="3.6.0" />
     <PackageReference Include="jQuery.Validation" Version="1.19.5" />
+    <PackageReference Include="MetadataExtractor" Version="2.7.2" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
